less: Prevent reply form overflow

--- a/less/posts.mix.less
+++ b/less/posts.mix.less
@@ -159,6 +159,10 @@ header {
 	margin-left: 0.5em;
 }
 
+.upload-container label {
+	padding: 0;
+}
+
 #thread-form-container.expanded {
 	padding: 0.7em;
 	& > span.act {
